fixed some spacing issues with form popup

--- a/styles.css
+++ b/styles.css
@@ -142,8 +142,8 @@ html,body{
     padding: 20px;
     border: 2px solid #888;
     border-radius: 5px;
-    width: 15%;
-    height: 40%;
+    width: 400px;
+    height: 450px;
     text-align: center;
     font-family: 'Lato', sans-serif;
     font-size: 25px;
